--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       </article>
 
       <article class="product-card">
-        <img class="product-image" src="https://sc04.alicdn.com/kf/H8d6c2720c5934d88974e97e92738b733n.jpg" alt="Portable Air Cooler 3" />
+        <img class="product-image" src="<a href="https://ibb.co/FfgGSqJ"><img src="https://i.ibb.co/krQYR60/re.png" alt="re" border="0"></a>" alt="Portable Air Cooler 3" />
         <div class="product-content">
           <h3 class="product-title">Refroidisseur d'air portable - Modèle 3</h3>
           <p class="product-desc">Refroidisseur compact et puissant, idéal pour un usage personnel et mobile, faible consommation d'énergie.</p>
