--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       </article>
 
       <article class="product-card">
-        <img class="product-image" src="https://sc04.alicdn.com/kf/Hf73534ea985e42c9b0ae5fbb1e8d66fdK.jpg" alt="Portable Air Cooler 4" />
+        <img class="product-image" src="<a href="https://ibb.co/Cpb9PgdV"><img src="https://i.ibb.co/p6fKhcD4/tr.jpg" alt="tr" border="0"></a>" alt="Portable Air Cooler 4" />
         <div class="product-content">
           <h3 class="product-title">Refroidisseur d'air portable - Modèle 4</h3>
           <p class="product-desc">Design moderne et fonction eau intégrée, faible consommation, adapté à la maison et aux espaces extérieurs.</p>
