--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       </article>
 
       <article class="product-card">
-        <img class="product-image" src="https://sc04.alicdn.com/kf/H4f84a7d6e6bb49dcba0e6d1088e70c3aF.jpg" alt="Portable Air Cooler 2" />
+        <img class="product-image" src="<a href="https://ibb.co/qLzKVKPV"><img src="https://i.ibb.co/DPNhThST/zzzzzzzzzz.jpg" alt="zzzzzzzzzz" border="0"></a>" alt="Portable Air Cooler 2" />
         <div class="product-content">
           <h3 class="product-title">Refroidisseur d'air portable - Modèle 2</h3>
           <p class="product-desc">Économique en énergie avec fonction de refroidissement par eau, parfait pour maison et utilisation en extérieur.</p>
