--- a/index.html
+++ b/index.html
@@ -335,6 +335,20 @@
     <a href="#products">Produits</a> |
     <a href="#contact">Contact</a>
   </nav>
+  <section class="company-info" style="margin: 3rem 0; padding: 2rem; background: #ffffff; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+  <h2 style="text-align: center; color: #004a99; margin-bottom: 1.5rem;">À propos de l’entreprise</h2>
+  <p style="font-size: 1rem; line-height: 1.6; color: #333;">
+    <strong>Nom de l’entreprise :</strong> Cixi Bisheng Electrical Appliances Co., Ltd.<br />
+    <strong>Numéro d’enregistrement :</strong> 91330282MA293MM481<br />
+    <strong>Date de création :</strong> 23 août 2017<br />
+    <strong>Date d’expiration :</strong> 22 août 2047<br />
+    <strong>Capital social :</strong> 1 000 000 RMB<br />
+    <strong>Forme juridique :</strong> Société à responsabilité limitée (investie ou contrôlée par une personne physique)<br />
+    <strong>Représentant légal :</strong> Cen Liehui<br />
+    <strong>Adresse :</strong> No. 1015, rue Guanfu, village Donghai, ville de Fuhai, Ningbo, Zhejiang, Chine<br />
+    <strong>Pays :</strong> Chine
+  </p>
+</section>
 </footer>
 
 </body>
