--- a/index.html
+++ b/index.html
@@ -349,6 +349,41 @@
     <strong>Pays :</strong> Chine
   </p>
 </section>
+  <section class="legal" style="background:#fff; padding:2rem; margin-top:3rem; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
+  <h2 style="color:#004a99; text-align:center; margin-bottom:1rem;">Mentions légales</h2>
+  <p><strong>Raison sociale :</strong> Cixi Bisheng Electrical Appliances Co., Ltd.</p>
+  <p><strong>Représentant légal :</strong> Cen Liehui</p>
+  <p><strong>Adresse :</strong> No. 1015, rue Guanfu, village Donghai, Fuhai Town, Ningbo, Zhejiang, Chine</p>
+  <p><strong>Numéro d'enregistrement :</strong> 91330282MA293MM481</p>
+  <p><strong>Email :</strong> <a href="mailto:zane@bisheng168.com">zane@bisheng168.com</a></p>
+  <p><strong>Téléphone :</strong> +86 183 5743 6614</p>
+</section>
+<nav style="margin-top: 1rem;">
+  <a href="#home">Accueil</a> |
+  <a href="#products">Produits</a> |
+  <a href="#contact">Contact</a> |
+  <a href="#privacy-policy">Politique de confidentialité</a> |
+  <a href="#legal">Mentions légales</a>
+</nav>
+  <section class="privacy-policy" style="background:#fff; padding:2rem; margin-top:3rem; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
+  <h2 style="color:#004a99; text-align:center; margin-bottom:1rem;">Politique de confidentialité</h2>
+  <p>
+    Nous recueillons certaines informations personnelles lors de votre visite sur notre site, notamment via le formulaire de contact ou lors d’un achat.  
+    Ces données peuvent inclure votre nom, adresse email, numéro de téléphone, ou données de navigation.
+  </p>
+  <p>
+    Les informations collectées sont utilisées uniquement pour répondre à vos demandes, traiter vos commandes ou améliorer votre expérience utilisateur.
+    Nous ne partageons jamais vos données avec des tiers non autorisés.
+  </p>
+  <p>
+    Notre site peut utiliser des cookies ou des technologies similaires pour mesurer l'audience ou optimiser le contenu, conformément à la réglementation en vigueur.
+  </p>
+  <p>
+    Conformément à la loi, vous avez le droit d’accéder, de modifier ou de supprimer vos données personnelles. Pour toute demande, contactez-nous à
+    <a href="mailto:zane@bisheng168.com">zane@bisheng168.com</a>.
+  </p>
+</section>
+
 </footer>
 
 </body>
